# ml4t

./: .gitignore  =2.0.1  AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md  README_restful3-H1_Apr-16-224137-2024_Conflict.md  a.txt
.claude/: settings.json
HandsOnAITradingBook/: README.md
agent-support/: legacy-pages.toml  studies.toml
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/: .gitattributes  book3_common.py  pyproject.toml
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_1_the_basics_of_algorithmic_trading/: 01_chapter_1_the_basics_of_algorithmic_trading.json  01_chapter_1_the_basics_of_algorithmic_trading.md  01_chapter_1_the_basics_of_algorithmic_trading_ko.md  01_chapter_1_the_basics_of_algorithmic_trading_ko_explained.md  README.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_1_the_basics_of_algorithmic_trading/notebooklm_artifacts/: data_table.csv  flashcards.md  mind_map.json  quiz.md  study_guide.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_1_the_basics_of_algorithmic_trading/original_matlab/: SOURCE.md  c01f002 (Efficient frontier).fig  ef.m  netVsLogRet.m
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_1_the_basics_of_algorithmic_trading/src/: chapter1_full_report.ipynb  run_chapter1_analysis.py
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_2_factor_models/: 02_chapter_2_factor_models.json  02_chapter_2_factor_models.md  02_chapter_2_factor_models_ko.md  02_chapter_2_factor_models_ko_explained.md  README.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_2_factor_models/notebooklm_artifacts/: data_table.csv  flashcards.md  mind_map.json  quiz.md  study_guide.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_2_factor_models/original_matlab/: FamaFrenchFactors.m  FamaFrenchFactors_predictive.m  SOURCE_MANIFEST.json  StatisticalFactors_predictive.m  crossSectional_SPX.m  crossSectional_SPX2.m  impliedSkewKurtVol.m  liquidity.m  oneFundamentalFactors.m  oneFundamentalFactors_hedged.m  oneFundamentalFactors_marketNeutral.m  retrieveSharesOutstanding.m  shortInterest_SPX.m  shortInterest_SPX3.m  twoFundamentalFactors.m  twoFundamentalFactors_hedged.m  twoFundamentalFactors_marketNeutral.m  twoFundamentalFactors_olddata.m
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_2_factor_models/src/: chapter2_full_report.ipynb  run_chapter2_analysis.py
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_3_time_series_analysis/: 03_chapter_3_time_series_analysis.json  03_chapter_3_time_series_analysis.md  03_chapter_3_time_series_analysis_ko.md  03_chapter_3_time_series_analysis_ko_explained.md  README.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_3_time_series_analysis/notebooklm_artifacts/: data_table.csv  flashcards.md  mind_map.json  quiz.md  study_guide.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_3_time_series_analysis/original_matlab/: KF_filter.m  SOURCE_MANIFEST.json  SSM_1MA_computerHardware.m  SSM_MA_computerHardware.m  SSM_MA_computerHardware_1noise.m  SSM_MA_computerHardware_diag.m  SSM_beta_EWA_EWC.m  SSM_beta_EWA_EWC_Abhishek.m  SSM_beta_EWA_EWC_diag.m  SSM_computerHardware.m  analyzeBTCUSD.m  analyzeHYG.m  analyzeSPY.m  analyzeUSDMXN2.m  analyzeUSDMXN3.m  buildAR1.m  buildARIMA_AUDUSD.m  buildARIMA_findPQ_AUDUSD.m  buildARMA_AUDUSD.m  buildARMA_findPQ_AUDUSD.m  buildARp_AUDUSD.m  buildARp_BTCUSD.m  buildARp_BTCUSD2.m  buildVAR1.m  buildVAR1_electricUtilities.m  buildVAR1_marketNeutral.m  buildVAR1_sectorNeutral.m  buildVAR1_sectorNeutral_computerHardware.m  buildVAR_findP_stocks.m
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_3_time_series_analysis/src/: chapter3_full_report.ipynb  run_chapter3_analysis.py
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_4_artificial_intelligence_techniques/: 04_chapter_4_artificial_intelligence_techniques.json  04_chapter_4_artificial_intelligence_techniques.md  04_chapter_4_artificial_intelligence_techniques_ko.md  04_chapter_4_artificial_intelligence_techniques_ko_explained.md  README.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_4_artificial_intelligence_techniques/notebooklm_artifacts/: data_table.csv  flashcards.md  mind_map.json  quiz.md  study_guide.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_5_options_strategies/: 05_chapter_5_options_strategies.json  05_chapter_5_options_strategies.md  05_chapter_5_options_strategies_ko.md  05_chapter_5_options_strategies_ko_explained.md  README.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_6_intraday_trading_and_market_microstructure/: README.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_7_bitcoins/: 07_chapter_7_bitcoins.json  07_chapter_7_bitcoins.md  07_chapter_7_bitcoins_ko.md  07_chapter_7_bitcoins_ko_explained.md  README.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/chapter_8_algorithmic_trading_is_good_for_body_and_soul/: README.md
source/Chan E. Machine Trading - Deploying Computer Algorithms to Conquer the Markets 2016/tests/: test_book3_common.py  test_chapter1_numerics.py  test_chapter2_numerics.py  test_chapter3_numerics.py  test_chapter4_numerics.py  test_chapter5_numerics.py  test_chapter6_numerics.py  test_chapter7_numerics.py  test_chapter8_numerics.py
(+808 files in other folders)
